@@ -63,7 +63,7 @@ description = Menlow on LPIA architecture (Crown Beach) using UME
 package_manager = apt
 target_os = ubuntu
 
-[netbook-lpia-moblin2]
-description = [BETA] Netbook on LPIA architecture using Moblin2
+[netbook-lpia-moblin2-prealpha1]
+description = Netbook on LPIA architecture using Moblin 2.0 Core Pre-Alpha1
 package_manager = yum
 target_os = moblin2
