@@ -14,8 +14,9 @@ moblin-image-creator (0.49) gaston; urgency=low
   * Reverted commit a0a42494e405182a84da8df52e096baf23dbab1b.
   * Added device files in install.sh.
   * Using the genisoimage in project environment.
+  * Renamed to netbook-lpia-moblin2-prealpha1 from netbook-lpia-moblin2. Fixed Moblin 2.0 Pre-Alpha1 yum repository. 
 
- -- Mitsutaka Amano <mamano@miraclelinux.com>  Mon, 02 Mar 2009 18:52:04 +0900
+ -- Mitsutaka Amano <mamano@miraclelinux.com>  Tue, 10 Mar 2009 00:13:01 +0900
 
 moblin-image-creator (0.48) gaston; urgency=low
 
